Fix various Sonar Code Smells